# snake

./: CMakeLists.txt  Makefile  main.cpp  tags
common/: GameConstants.h  GameTypes.h  snake_consts.h
controller/: GameController.cpp  GameController.h  snake_controller.cpp  snake_controller.h
model/: GameModel.cpp  GameModel.h  snake_model.cpp  snake_model.h
view/: GameView.cpp  GameView.h
view/cli/: snake_cli.cpp  snake_cli.h
view/desktop/: snake_gtk.cpp  snake_gtk.h
